tests/e2e/semantics/nested_types2.error
Error: syntax error in story at line 7, column 5

7|    c = b["foo"][0]
          ^

E0104: `map[int,list[string]]` can't be indexed with `string`
